--- a/Challenge 2/index.html
+++ b/Challenge 2/index.html
@@ -16,6 +16,25 @@
         <div id="img-box">
           
         </div>
+        </div>
+
+        <div class="container-1">
+            <h2 class="center">Challenge 3: Rock, Paper, Scissors</h2>
+        
+        <div id="flex-box-container" class="flex-box-container-div">
+            <img id="rock" src="/img/rock.PNG" alt="" width="280" height="250" onclick="rpsGame(this)">
+            <img id="paper" src="/img/paper.PNG" alt="" width="280" height="250" onclick="rpsGame(this)">
+            <img id="scissors" src="/img/scissors.PNG" alt="" width="280" height="250" onclick="rpsGame(this)">
+        </div>
+
+
+
+
+
+
+
+
+
     </div>
     <script src="home.mjs"></script>
 </body>
